ZGC: C2: Generates on_weak instead of on_strong barriers

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 13
    • Affects Version/s: 13, 14
    • Component/s: hotspot
    • gc
    • b29
    • Not verified

        After a bunch of repetitions of output that looks like this:

        0: Testing non-null after GC force for: nsk.share.gc.newclass.static_combination_schild
        0: Unloading class: nsk.share.gc.newclass.static_combination_schild
        0: Result of uloading class nsk.share.gc.newclass.static_combination_schild: true
        0: Loading class: nsk.share.gc.newclass.transient_combination_schild
        0: Class loaded: nsk.share.gc.newclass.transient_combination_schild
        0: Instance of the class: nsk.share.gc.newclass.transient_combination_schild@456192ca
        Added field objC .... 3
        Added field objC .... 2

        there is instead this:

        Added field objC .... 3
        Added field objC .... 2
        Added field objC .... 1
        Exception in
        gc.gctests.LargeObjects.large001.large001$Worker@1e118460
        nsk.share.TestFailure: Unexpected exception:
        at gc.gctests.LargeObjects.large001.large001$Worker.run(large001.java:179)
        at nsk.share.runner.ThreadsRunner$ManagedThread.run(ThreadsRunner.java:83)
        Caused by: java.lang.NullPointerException
        at java.base/java.lang.String.length(String.java:674)
        at java.base/java.lang.String.startsWith(String.java:1448)
        at java.base/java.lang.String.startsWith(String.java:1491)
        at gc.gctests.LargeObjects.large001.large001$Worker.addObjRef(large001.java:191)
        at gc.gctests.LargeObjects.large001.large001$Worker.addObjRef(large001.java:195)
        at gc.gctests.LargeObjects.large001.large001$Worker.addObjRef(large001.java:195)
        at gc.gctests.LargeObjects.large001.large001$Worker.run(large001.java:148)
        ... 1 more

              Assignee:
              Stefan Karlsson
              Reporter:
              Kim Barrett
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: