8225770: ZGC: C2: Generates on_weak instead of on_strong barriers

Reviewed-by: neliasso, eosterlund